# GPU-final-project

./: CMakeLists.txt  README.md  run_benchmark.sh  run_benchmark_full.sh  run_tests.sh
KMeansBasic/: CMakeLists.txt
KMeansBasic/src/: kmeans_gpu.cu  kmeans_gpu.h  main_test.cpp
KMeansCMem/: CMakeLists.txt
KMeansCMem/src/: kmeans_gpu.cu  kmeans_gpu.h
KMeansCPU/: CMakeLists.txt
KMeansCPU/src/: dataset_generator.cpp  kmeans_cpu.cpp  kmeans_cpu.hpp  main_test.cpp
KMeansCoalesced/: CMakeLists.txt
KMeansCoalesced/src/: kmeans_gpu.cu  kmeans_gpu.h
KMeansCoarse/: CMakeLists.txt
KMeansCoarse/src/: kmeans_gpu.cu  kmeans_gpu.h
KMeansFinal/: CMakeLists.txt
KMeansFinal/src/: kmeans_gpu.cu  kmeans_gpu.h
KMeansShared/: CMakeLists.txt
KMeansShared/src/: kmeans_gpu.cu  kmeans_gpu.h
report/benchmarks/: benchmark1.txt  benchmark1_full.txt  benchmark2.txt  benchmark2_full.txt  benchmark3.txt  benchmark3_full.txt  benchmark4.txt  benchmark4_full.txt  benchmark5.txt  benchmark5_full.txt  benchmark6.txt  benchmark6_full.txt
report/output/: slurm-9851.out  slurm-9852.out  slurm-9854.out  slurm-9855.out
